Adding Titles and Description to the page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>What is Your Ghanian Day Name?</title>
   </head>
   <body>
+    <div class="container">
+      <h1>
+        What is Your Ghanian Day Name?
+      </h1>
+      <h2>
+        Find out what your name would be if your were Ghanaian.
+      </h2>
+      <p>
+        People from Ghana name their children after the day of the week when they were born. Enter your Date of Birth & gender below
+        to find out what your name would be if you were born in Ghana. 
+      </p>
+    </div>
 
   </body>
 </html>
