Linking css to html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <title>What is Your Ghanian Day Name?</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
       </h2>
       <p>
         People from Ghana name their children after the day of the week when they were born. Enter your Date of Birth & gender below
-        to find out what your name would be if you were born in Ghana. 
+        to find out what your name would be if you were born in Ghana.
       </p>
     </div>
 
