--- a/index.html
+++ b/index.html
@@ -7,17 +7,33 @@
   </head>
   <body>
     <div class="container">
+      <div class="jumbotron">
       <h1>
         What is Your Ghanian Day Name?
       </h1>
-      <h2>
+      <h4>
         Find out what your name would be if your were Ghanaian.
-      </h2>
+      </h4>
+      </div>
+      <div class="card">
       <p>
         People from Ghana name their children after the day of the week when they were born. Enter your Date of Birth & gender below
         to find out what your name would be if you were born in Ghana.
       </p>
-    </div>
+      </div>
+      <form name="birthday_form" action="">
+        <div class="form-group" id="userbirthday">
+          <label for="date">Enter your birthday</label>
+          <input type="date" class="form-control">
+        </div>
+
+        <label for="gender">Gender</label>
+        <select class="form-control" id="usergender">
+          <option>Male</option>
+          <option>Female</option>
+        </select>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
 
   </body>
 </html>
