Moved the webapp description inside the form tag

--- a/index.html
+++ b/index.html
@@ -9,24 +9,17 @@
     <div class="container">
       <div class="jumbotron">
       <h1>
-        What is Your Ghanian Day Name?
+        What is Your Akan Name?
       </h1>
-      <h4>
-        Find out what your name would be if your were Ghanaian.
-      </h4>
       </div>
-      <div class="card">
-      <p>
-        People from Ghana name their children after the day of the week when they were born. Enter your Date of Birth & gender below
-        to find out what your name would be if you were born in Ghana.
-      </p>
-      </div>
+
       <form name="birthday_form" action="">
+        People from Ghana name their children after the day of the week when they were born. Enter your birthday & gender below
+        and click submit to find out your Akan name.
         <div class="form-group" id="userbirthday">
           <label for="date">Enter your birthday</label>
           <input type="date" class="form-control">
         </div>
-
         <label for="gender">Gender</label>
         <select class="form-control" id="usergender">
           <option>Male</option>
