--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="date" class="form-control" id="userBirthday">
         </div>
         <label for="gender">Gender</label>
-        <select class="form-control" id="usergender">
+        <select class="form-control" id="userGender">
           <option>Select your Gender</option>
           <option>Male</option>
           <option>Female</option>
