Centered submit button and increased size

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         </select>
         <br>
         <br>
-        <button type="submit" class="btn btn-primary" onclick="dayCalculator()">Submit</button>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary btn-block" onclick="dayCalculator()">Submit</button>
+        </div>
       </form>
     </div>
   </body>
