Added custom stylesheet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+
     <script src="Birthday_Calculator.js"></script>
     <title>What is Your Ghanian Day Name?</title>
   </head>
@@ -23,9 +25,9 @@
           <label for="date">Enter your birthday</label>
           <input type="date" class="form-control" id="userBirthday">
         </div>
-        <label for="gender">Gender</label>
+        <label for="gender">Select your Gender</label>
         <select class="form-control" id="userGender">
-          <option>Select your Gender</option>
+          <option>Gender</option>
           <option>Male</option>
           <option>Female</option>
         </select>
