Modified text alignment in the form

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 
     <script src="Birthday_Calculator.js"></script>
@@ -17,9 +17,9 @@
       </div>
 
       <form name="birthday_form">
-        People from Ghana name their children after the day of the week when they were born. Enter your birthday & gender below
+        <p>People from Ghana name their children after the day of the week when they were born. Enter your birthday & gender below
         and click submit to find out your Akan name.
-        <br>
+        </p>
         <br>
         <div class="form-group">
           <label for="date">Enter your birthday</label>
