Added if statement to check date validity and change input type for date field to text

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         <div class="form-group">
           <label for="date">Enter your birthday</label>
-          <input type="date" class="form-control" id="userBirthday">
+          <input type="text" class="form-control" id="userBirthday" placeholder="dd/mm/yyyy">
         </div>
         <label for="gender">Select your Gender</label>
         <select class="form-control" id="userGender">
