--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <form name="birthday_form">
-        <p>People from Ghana name their children after the day of the week when they were born. Enter your birthday & gender below
+        <p>People from Ghana name their children after the day they were born. Enter your birthday & gender below
         and click submit to find out your Akan name.
         </p>
         <br>
